<resources>
    <string name="app_name">FarmaciasAhorro</string>
    <string name="Name_P">Nombre de paciente</string>
    <string name="Status">Estado de paciente</string>
    <string name="Email">Correo</string>
    <string name="Telephone">Telefono</string>
    <string name="Dir">Direccion</string>
    <string name="Pad">Padecimiento</string>
    <string name="Date">Fecha de cita</string>
    <string name="Date_time">Hora de la cita</string>
    <string name="Doc">Elegir doctor</string>
    <string name="save">Guardar</string>

    <string-array name="Drs">
      <item>"Dr. Nacho"</item>
        <item>"Dr. Gerson"</item>
        <item>"Dr. Yuri"</item>
        <item>"Dr. Jorge"</item>
        <item>"Dr.  Miguel"</item>
        <item>"Dr. Pedro El Momo"</item>
        <item>"Dr. Lion"</item>
        <item>"Dr. Gaara"</item>
        <item>"Dr. Naruto"</item>

    </string-array>

</resources>
