<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.school.judios.farmaciasahorro.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_dark">

        <LinearLayout
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/NPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Name_P"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/Name_Paciente"
                android:fontFamily="monospace"
                android:hint="Ingrese su nombre"
                android:inputType="textAutoComplete|textPersonName" />

            <TextView
                android:id="@+id/EPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Status"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/EPaciente"
                android:fontFamily="monospace"
                android:hint="Ingrese su edad"
                android:inputType="number" />

            <TextView
                android:id="@+id/CPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Email"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/CPaciente"
                android:fontFamily="monospace"
                android:hint="Ingrese su correo"
                android:inputType="textEmailAddress|textWebEmailAddress" />

            <TextView
                android:id="@+id/TPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Telephone"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/TPaciente"
                android:fontFamily="monospace"
                android:hint="Ingrese telefono del paciente"
                android:inputType="number" />

            <TextView
                android:id="@+id/direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Dir"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/direccion"
                android:fontFamily="monospace"
                android:hint="Ingrese su direccion"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/Fotopaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/targeturi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/Ohnolafoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/padecimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Pad"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/padecimiento"
                android:fontFamily="monospace"
                android:hint="Ingrese sus sintomas"
                android:inputType="text" />

            <TextView
                android:id="@+id/FCita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Date"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/FCita"
                android:fontFamily="monospace"
                android:hint="Fecha de cita"
                android:inputType="date" />

            <TextView
                android:id="@+id/HCita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Date_time"
                android:textColor="@android:color/holo_blue_dark" />

            <EditText
                android:id="@+id/Celda_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/Hora_Cita"
                android:fontFamily="monospace"
                android:hint="Hora de cita"
                android:inputType="time" />

            <TextView
                android:id="@+id/Choose_D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Doc" />

            <Spinner
                android:id="@+id/doctor_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/Choose_D" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toast"
                android:text="@string/save"
                android:onClick="Toast"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
